[package]
name = "rust-matchmaking-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
dotenvy = "0.15.7"
futures = "0.3.31"
getrandom = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
warp = { version = "0.3.7", features = ["tls"] }
